# Platform-Agent

./: .env.example  .gitignore  Dockerfile  LICENSE  PACKAGING.md  QUICKSTART.md  R2-REGISTRY.md  README.md  docker-compose.yml  k3s.yaml  k3s.yml  platform-agent.stacker  pyproject.toml  stacker.yaml  stacker.yml  wrangler.toml
cf-workers/: README.md  wrangler.toml
cf-workers/src/: chat.ts  index.ts
src/: worker.ts
src/platform_agent/: __init__.py  agent.py  audit.py  config.py  memory.py  ml.py  security.py  server.py  skills.py  tools.py  workflow.py
src/platform_agent/db/: __init__.py  invitation.py  models.py
ui/: Dockerfile  README.md  package.json
ui/src/components/: Chat.tsx  KnowledgeGraph.tsx
ui/src/layouts/: AuthLayout.astro  ChatLayout.astro
ui/src/pages/: canvas.astro  chat.astro  departments.astro  graph.astro  index.astro  industries.astro  invite.astro  organization.astro  profile.astro  roles.astro  settings.astro  signin.astro  signup.astro  workflow.astro
