[project]
name = "platform-agent"
version = "0.1.0"
description = "Autonomous AI agent platform with SurrealDB backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "OpenAutonomyx", email = "hello@openautonomyx.org"},
]
license = {text = "MIT"}
keywords = ["ai", "agent", "autonomous", "surrealdb", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "surrealdb>=1.0.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]